fix: align text on inventory file label.

--- a/src/aux-server/aux-web/aux-player/InventoryFile/InventoryFile.css
+++ b/src/aux-server/aux-web/aux-player/InventoryFile/InventoryFile.css
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     background-color: rgba(255,255,255,0.5);
     border-radius: 0.75em;
 }
